_sass/minima/custom-styles.scss
// Placeholder to allow defining custom styles that override everything else.
// (Use `_sass/minima/custom-variables.scss` to override variable defaults)

.post-meta {
    font-size: $small-font-size;
    color: $brand-color;
    padding-right: 15px;
}
  
.post-icon-cal {
    font-size: $small-font-size;
    color: #83b0e1;
    padding-right: 7px;
}
  
.post-icon-tag {
    font-size: $small-font-size;
    color: #83b0e1;
    padding-right: 3px;
}
  
.post-link {
    color: $lm-text-color;
    display: block;
    border: 1px solid #e1ecf7;
    border-radius: 10px;
    padding: 15px;
    text-decoration: none!important;
    transition-duration: 0.2s;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px;
    @include relative-font-size(1);
}

.post-link:hover {
    background-color: #e1ecf7;
}

.post-link:visited {
    color: $lm-text-color;
}

.post-excerpt {
    color: $lm-brand-color-dark;
}

.footer-col-right {
    text-align: right;
}

